Fixed percentages & aligned arrow

--- a/css-exercise-three/css/style.css
+++ b/css-exercise-three/css/style.css
@@ -45,13 +45,14 @@ h3 {
 /*** added arrow position ***/
 .arrow {
   display: inline-block 50%;
-  text-align: right;
+  float: right;
+  margin-top: -7%;
   margin-right: 10px;
 }
 
 /***Added location styles for borders***/
 .location {
-  padding: 10px;
+  padding: 4%;
   border: 1px solid;
   border-color: #797979;
 }
